fix: box shadow bug on ios

--- a/src/drive/web/modules/drive/Toolbar/components/styles.styl
+++ b/src/drive/web/modules/drive/Toolbar/components/styles.styl
@@ -27,7 +27,7 @@
     box-sizing border-box
     justify-content space-between
     align-items center
-    box-shadow 0 0.5px 0 0 rgba(0, 0, 0, 0.3)
+    border-bottom 0.5px solid rgba(0, 0, 0, 0.3)
 }
 
 .modal-footer {
